<resources>
    <string name="app_name">PureMusicTest</string>
    <string name="welcome_text_1">Thanks for downloading Jams Music Player. To help you get started with the app, you\'ll be guided through a few initial steps. Swipe left to continue.</string>
    <string name="scan_frequency_instructions">Pick how often you want your library to be rescanned for new music. You can always manually rescan from the app too.</string>
    <string name="scan_every_startup">Scan at every startup</string>
    <string name="scan_every_3_startups">Scan every 3 startups</string>
    <string name="scan_every_5_startups">Scan every 5 startups</string>
    <string name="scan_every_10_startups">Scan every 10 startups</string>
    <string name="scan_every_20_startups">Scan every 20 startups</string>
    <string name="scan_manually">Scan manually</string>
    <string name="preferred_album_art_instructions">Choose your preferred album art source. If you\'re not sure, choose the first option. You can change these options later in Settings.</string>

    <string name="pick_whats_best_for_me">Pick what\'s best for me</string>
    <string name="building_album_art">Building Album Art</string>
    <string name="no_songs_to_skip_to">No more songs to skip to.</string>
    <string name="use_embedded_art_only">Use embedded art only</string>
    <string name="use_folder_art_only">Use folder art only</string>
    <string name="ready_to_scan_instructions">Jams will now build your music library and album art. Feel free to close the app during this process.</string>
    <string name="swipe_left_to_continue">Swipe left to continue.</string>
    <string name="finish">Finish</string>
    <string name="jams_is_building_library">Jams is building your library.</string>
    <string name="jams_is_building_library_info">Feel free to close the app during this process. Swipe down your notification drawer at any time to check the current progress.</string>
    <string name="jams_is_caching_artwork">Jams is caching album art.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_scan_media">ScanMediaActivity</string>
    
    <string name="play_mode_round">循环播放</string>
    <string name="play_mode_order">顺序播放</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_roundsingle">单曲循环</string>

    <string name="tuijian">推荐</string>
    <string name="gedan">歌单</string>
    <string name="bangdan">榜单</string>
    <string name="shipin">视频</string>

    <string name="HuaYuNan">华语男歌手</string>
    <string name="HuaYuNv">华语女歌手</string>
    <string name="HuaYuTeam">华语组合</string>
    <string name="OuMeiNan">欧美男歌手</string>
    <string name="OuMeiNv">欧美女歌手</string>
    <string name="OuMeiTeam">欧美组合</string>
    <string name="HanGuoNan">韩国男歌手</string>
    <string name="HanGuoNv">韩国女歌手</string>
    <string name="HanGuoTeam">韩国组合</string>
    <string name="JapanNan">日本男歌手</string>
    <string name="JapanNv">日本女歌手</string>
    <string name="JapanTeam">日本组合</string>
    <string name="Other">其他</string>
    <string name="hot_artist">热门</string>
    <string name="solo">单曲</string>

    <string name="unknown">未知</string>
    <string name="artist">艺术家</string>
    <string name="songer">歌手</string>
    <string name="publish_time">发行时间：</string>

    <string name="song_categary">歌曲分类</string>

    <string name="all">全部</string>
    <string name="hotest">最热</string>
    <string name="latest">最新</string>
    <string name="mv_categort_recommand">推荐精选</string>
    <string name="select_mv_category">选择分类</string>

    <string name="i_like_danqu">我喜欢的单曲</string>
    <string name="new_playlist">新建歌单</string>
</resources>
