<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/white"
        android:clickable="true">
        <TextView
            android:layout_width="4dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/title_tag_shape"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:text="@string/all" />
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hotest"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="|"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/latest"/>
    </LinearLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/rvSongList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.jcodecraeer.xrecyclerview.XRecyclerView>
</FrameLayout>